Grpc and exception handling
